<resources>
    <string name="app_name">Desarrollo-Mobile_TP-Integrador</string>

    <string-array name="tipos_de_inversion">
        <item>Plazo fijo</item>
        <item>Fondo común de inversión</item>
    </string-array>

    <string name="pregunta_edad">Tu edad se encuentra dentro del rango de:</string>
    <string name="experiencia_inversion">¿Qué experiencia tenés como inversionista?</string>

    <!-- TERMINOS Y CONDICIONES -->

    <string name="subtitulo1">INFORMACION RELEVANTE</string>
    <string name="parrafo1">
        Es requisito necesario para la adquisición de los productos que se ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos  que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con ingreso de datos personales fidedignos y definición de una contraseña. El usuario puede elegir y cambiar la clave para su acceso de administración de la cuenta en cualquier momento, en caso de que se haya registrado y que sea necesario para la compra de alguno de nuestros productos. https://banquito.com no asume la responsabilidad en caso de que entregue dicha clave a terceros.
        Todas las compras y transacciones que se lleven a cabo por medio de este sitio web, están sujetas a un proceso de confirmación y verificación, el cual podría incluir la verificación del stock y disponibilidad de producto, validación de la forma de pago, validación de la factura (en caso de existir) y el cumplimiento de las condiciones requeridas por el medio de pago seleccionado. En algunos casos puede que se requiera una verificación por medio de correo electrónico.
        Los precios de los productos ofrecidos en esta Tienda Online es válido solamente en las compras realizadas en este sitio web.
    </string>

    <string name="subtitulo2">LICENCIA</string>
    <string name="parrafo2">Banco generico  a través de su sitio web concede una licencia para que los usuarios utilicen  los productos que son vendidos en este sitio web de acuerdo a los Términos y Condiciones que se describen en este documento.</string>
    <string name="subtitulo3">USO NO AUTORIZADO</string>
    <string name="parrafo3">En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programación) usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o ningún otro medio y ofrecerlos para la redistribución o la reventa de ningún tipo.</string>
    <string name="subtitulo4">PROPIEDAD</string>
    <string name="parrafo4">Usted no puede declarar propiedad intelectual o exclusiva a ninguno de nuestros productos, modificado o sin modificar. Todos los productos son propiedad  de los proveedores del contenido. En caso de que no se especifique lo contrario, nuestros productos se proporcionan  sin ningún tipo de garantía, expresa o implícita. En ningún esta compañía será  responsables de ningún daño incluyendo, pero no limitado a, daños directos, indirectos, especiales, fortuitos o consecuentes u otras pérdidas resultantes del uso o de la imposibilidad de utilizar nuestros productos.</string>
    <string name="subtitulo5">PRIVACIDAD</string>
    <string name="parrafo5">
        Este https://banquito.com garantiza que la información personal que usted envía cuenta con la seguridad necesaria. Los datos ingresados por usuario o en el caso de requerir una validación de los pedidos no serán entregados a terceros, salvo que deba ser revelada en cumplimiento a una orden judicial o requerimientos legales.
        La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser seleccionada al momento de crear su cuenta.
        Banco generico reserva los derechos de cambiar o de modificar estos términos sin previo aviso.
    </string>
</resources>